5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1773_2107.log
== TEST (2019-05-27 19:43:19) 
-- CODE:
from numpy import *
string = input("digite a string: ")
string = string.upper()
i = 0
vogal = 0
consoante = 0
while(i < len(string)):
	if(string[i] == "A" or "E" or "I" or "O" or "U"):
		vogal = vogal + 1
	else:
		consoante  = consoante + 1
	i = i + 1
print(vogal)
print(consoante)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:43:29) 
-- CODE:
from numpy import *
string = input("digite a string: ")
string = string.upper()
i = 0
vogal = 0
consoante = 0
while(i < len(string)):
	if(string[i] == "A" or "E" or "I" or "O" or "U"):
		vogal = vogal + 1
	else:
		consoante  = consoante + 1
	i = i + 1
print(vogal)
print(consoante)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:43:36) 
-- CODE:
from numpy import *
string = input("digite a string: ")
string = string.upper()
i = 0
vogal = 0
consoante = 0
while(i < len(string)):
	if(string[i] == "A" or "E" or "I" or "O" or "U"):
		vogal = vogal + 1
	else:
		consoante  = consoante + 1
	i = i + 1
print(vogal)
print(consoante)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:44:50) 
-- CODE:
from numpy import *
string = input("digite a string: ")
string = string.upper()
i = 0
vogal = 0
consoante = 0
while(i < len(string)):
	if(string[i] == "A" ):
		vogal = vogal + 1
	else:
		consoante  = consoante + 1
	i = i + 1
print(vogal)
print(consoante)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:45:13) 
-- CODE:
from numpy import *
string = input("digite a string: ")
string = string.upper()
i = 0
vogal = 0
consoante = 0
while(i < len(string)):
	if(string[i] == "A" or "E" ):
		vogal = vogal + 1
	else:
		consoante  = consoante + 1
	i = i + 1
print(vogal)
print(consoante)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 19:49:22) 
-- CODE:
from numpy import *
string = input("digite a string: ")
string = string.upper()
i = 0
vogal = 0
consoante = 0
while(i < len(string)):
	if(string[i] == "A"):
		vogal = vogal + 1
	elif(string[i] == "E")
		vogal = vogal + 1
	elif(string[i] == "I")
		vogal = vogal + 1
	elif(string[i] == "O")
		vogal = vogal + 1
	elif(string[i] == "U")
		vogal = vogal + 1
	else:
		consoante  = consoante + 1
	i = i + 1
print(vogal)
print(consoante)

-- EXECUTION TIME:
0.16463
-- ERROR:
  File "/home/codebench/codes/1773/2107/main.py", line 10
    elif(string[i] == "E")
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:49:24) 
-- CODE:
from numpy import *
string = input("digite a string: ")
string = string.upper()
i = 0
vogal = 0
consoante = 0
while(i < len(string)):
	if(string[i] == "A"):
		vogal = vogal + 1
	elif(string[i] == "E")
		vogal = vogal + 1
	elif(string[i] == "I")
		vogal = vogal + 1
	elif(string[i] == "O")
		vogal = vogal + 1
	elif(string[i] == "U")
		vogal = vogal + 1
	else:
		consoante  = consoante + 1
	i = i + 1
print(vogal)
print(consoante)

-- ERROR:
File "XXXX", line 10
    elif(string[i] == "E")
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:49:44) 
-- CODE:
from numpy import *
string = input("digite a string: ")
string = string.upper()
i = 0
vogal = 0
consoante = 0
while(i < len(string)):
	if(string[i] == "A"):
		vogal = vogal + 1
	elif(string[i] == "E"):
		vogal = vogal + 1
	elif(string[i] == "I"):
		vogal = vogal + 1
	elif(string[i] == "O"):
		vogal = vogal + 1
	elif(string[i] == "U"):
		vogal = vogal + 1
	else:
		consoante  = consoante + 1
	i = i + 1
print(vogal)
print(consoante)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 19:49:50) 
-- CODE:
from numpy import *
string = input("digite a string: ")
string = string.upper()
i = 0
vogal = 0
consoante = 0
while(i < len(string)):
	if(string[i] == "A"):
		vogal = vogal + 1
	elif(string[i] == "E"):
		vogal = vogal + 1
	elif(string[i] == "I"):
		vogal = vogal + 1
	elif(string[i] == "O"):
		vogal = vogal + 1
	elif(string[i] == "U"):
		vogal = vogal + 1
	else:
		consoante  = consoante + 1
	i = i + 1
print(vogal)
print(consoante)

-- EXECUTION TIME:
0.351332
-- TEST CASE 1:
---- input:
ABCD
---- correct output:
1
3
---- user output:
1
3
-- TEST CASE 2:
---- input:
STRING
---- correct output:
1
5
---- user output:
1
5
-- TEST CASE 3:
---- input:
TESTE
---- correct output:
2
3
---- user output:
2
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
